--- a/menu.htm
+++ b/menu.htm
@@ -18,9 +18,11 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="restaurant.htm">Accueil</a></li>
-                    <li><a href="menu.htm" class="active">La Carte</a></li>
-                    <li><a href="#">Livraison</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="menu.htm">La Carte</a></li>
+                    <li><a href="livraison.htm">Livraison</a></li>
+                    <li><a href="moncompte.htm">Mon Compte</a></li>
+                    <li><a href="admin.htm">Admin</a></li>
+                    <li><a href="notation.htm">Notation</a></li>
                 </ul>
             </nav>
             <div class="auth-links">
