--- a/restaurant.htm
+++ b/restaurant.htm
@@ -51,9 +51,9 @@
         <div class="grid-item text-content">
             <h2>L'Art du Couscous</h2>
             <p>
-                Nos chefs préparent chaque jour la semoule selon la tradition.
-                Des produits frais, des épices choisies avec soin et un savoir-faire
-                transmis de génération en génération.
+            Chez Les Arcades, le couscous n'est pas qu'un simple plat, c'est un véritable rituel ancestral. Chaque matin, nos chefs travaillent la semoule à la main, grain par grain, pour obtenir une texture d'une légèreté et d'une finesse incomparables.
+            Nous sélectionnons rigoureusement nos légumes auprès de producteurs locaux et composons nos propres mélanges d'épices — Ras el-Hanout, safran pur et cumin moulu — pour garantir une explosion de saveurs authentiques. 
+            Qu'il soit au thon frais, à l'agneau fondant ou purement végétarien, chaque assiette raconte une histoire de terroir et de passion.
             </p>
         </div>
 
