--- a/connection.htm
+++ b/connection.htm
@@ -34,6 +34,7 @@
     </header>
 
     <main class="login-page">
+        <h1 class="main-title-profile">Connexion</h1>
         <div class="login-container">
             <form class="login-form">
                 <div class="input-group">
