--- a/menu.htm
+++ b/menu.htm
@@ -41,7 +41,7 @@
             <section class="menu-column">
                 <h2 class="category-title">Préludes</h2>
                 <div class="menu-item">
-                    <h3>La Pastilla de l'Atlas</h3>
+                    <h3>La Pastilla de l'Atlas <sub>1,3,8</sub></h3>
                     <p>Feuilleté craquant au pigeon, amandes torréfiées et cannelle fine.</p>
                     <span class="price">16€</span>
                 </div>
@@ -51,7 +51,7 @@
                     <span class="price">14€</span>
                 </div>
                 <div class="menu-item">
-                    <h3>Gambas au Ras el-Hanout</h3>
+                    <h3>Gambas au Ras el-Hanout <sub>2,7</sub></h3>
                     <p>Saisies à la plancha, émulsion de coriandre fraîche et citron vert.</p>
                     <span class="price">19€</span>
                 </div>
@@ -60,17 +60,17 @@
             <section class="menu-column">
                 <h2 class="category-title">Cœurs de Fête</h2>
                 <div class="menu-item">
-                    <h3>Le Couscous Signature</h3>
+                    <h3>Le Couscous Signature <sub>1</sub></h3>
                     <p>Semoule travaillée à la main, agneau de sept heures et légumes oubliés.</p>
                     <span class="price">32€</span>
                 </div>
                 <div class="menu-item">
-                    <h3>Tajine d'Or de Casablanca</h3>
+                    <h3>Tajine d'Or de Casablanca <sub>12</sub></h3>
                     <p>Poulet fermier, citrons confits, olives violettes et safran pur.</p>
                     <span class="price">28€</span>
                 </div>
                 <div class="menu-item">
-                    <h3>Noix de Saint-Jacques d'Orient</h3>
+                    <h3>Noix de Saint-Jacques d'Orient <sub>14</sub></h3>
                     <p>Sur un lit de purée de pois chiches au cumin et jus de rôti corsé.</p>
                     <span class="price">34€</span>
                 </div>
@@ -79,12 +79,12 @@
             <section class="menu-column">
                 <h2 class="category-title">Douceurs</h2>
                 <div class="menu-item">
-                    <h3>L'Orange de Marrakech</h3>
+                    <h3>L'Orange de Marrakech <sub>8</sub></h3>
                     <p>Fines lamelles à la fleur d'oranger, sorbet menthe et éclats de pistache.</p>
                     <span class="price">12€</span>
                 </div>
                 <div class="menu-item">
-                    <h3>Perle de Gazelle</h3>
+                    <h3>Perle de Gazelle <sub>1,3,7,8</sub></h3>
                     <p>Réinterprétation de la pâtisserie fine, crème légère au miel et amande.</p>
                     <span class="price">13€</span>
                 </div>
@@ -94,8 +94,9 @@
                     <span class="price">15€</span>
                 </div>
             </section>
+            </p><a href="allergenes.htm" class="Listes-allergenes">Listes allergènes</a>
         </div>
-
+	
         <div class="separator"></div>
 
         <section class="experience-section">
