--- a/menu.htm
+++ b/menu.htm
@@ -36,7 +36,14 @@
             <h1 class="gold-title">Notre Carte</h1>
             <p class="subtitle">Une odyssée sensorielle entre tradition et modernité</p>
         </section>
-
+<div class="search-wrapper">
+    <form class="search-form">
+        <input type="text" class="search-input" placeholder="Chercher un plat (ex: Royal, Tajine...)" aria-label="Rechercher">
+        <button type="submit" class="search-submit">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+        </button>
+    </form>
+</div>
         <div class="grid-menu">
             <section class="menu-column">
                 <h2 class="category-title">Préludes</h2>
