--- a/restaurant.htm
+++ b/restaurant.htm
@@ -102,6 +102,14 @@
                 <span class="prix">15€</span>
             </div>
         </div>
+    <div class="search-wrapper">
+    <form class="search-form">
+        <input type="text" class="search-input" placeholder="Chercher un plat (ex: Royal, Tajine...)" aria-label="Rechercher">
+        <button type="submit" class="search-submit">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+        </button>
+    </form>
+</div>
 
         <div class="stats-container">
             <div class="stat-box">
