--- a/restaurant.htm
+++ b/restaurant.htm
@@ -43,33 +43,33 @@
     </section>
 
     <section class="grid-layout">
-        
-        <div class="grid-item photo-container">
-             <img src="https://www.thuriesmagazine.fr/sites/default/files/styles/recette_header/public/recettes/couscous-thon-frais-agadir.jpg" alt="Couscous au thon frais">
-        </div>
+    
+    <div class="grid-item photo-container">
+         <img src="couscous.jpg" alt="Couscous au thon frais">
+    </div>
 
-        <div class="grid-item text-content">
-            <h2>L'Art du Couscous</h2>
-            <p>
-                Nos chefs préparent chaque jour la semoule selon la tradition.
-                Des produits frais, des épices choisies avec soin et un savoir-faire
-                transmis de génération en génération.
-            </p>
-        </div>
+    <div class="grid-item text-content">
+        <h2>L'Art du Couscous</h2>
+        <p>
+            Nos chefs préparent chaque jour la semoule selon la tradition.
+            Des produits frais, des épices choisies avec soin et un savoir-faire
+            transmis de génération en génération.
+        </p>
+    </div>
 
-        <div class="grid-item text-content">
-            <h2>Une Ambiance Chaleureuse</h2>
-            <p>
-                Profitez d'un cadre unique pour vos dîners en famille ou entre amis.
-                Les Arcades, c'est avant tout une histoire de partage.
-            </p>
-        </div>
+    <div class="grid-item text-content">
+        <h2>Une Ambiance Chaleureuse</h2>
+        <p>
+            Profitez d'un cadre unique pour vos dîners en famille ou entre amis.
+            Les Arcades, c'est avant tout une histoire de partage.
+        </p>
+    </div>
 
-        <div class="grid-item photo-container">
-             <img src="https://www.thuriesmagazine.fr/sites/default/files/styles/recette_header/public/recettes/couscous-thon-frais-agadir.jpg" alt="Plat signature Les Arcades">
-        </div>
+    <div class="grid-item photo-container">
+         <img src="couscous.jpg" alt="Plat signature Les Arcades">
+    </div>
 
-    </section>
+</section>
 
     <section class="menu-section">
         <h2 class="menu-title">Spécialités</h2>
