Modify images and enhance search form structure
Updated image alt texts and restructured search form.

--- a/restaurant.htm
+++ b/restaurant.htm
@@ -24,7 +24,6 @@
                     <li><a href="moncompte.htm">Mon Compte</a></li>
                     <li><a href="admin.htm">Admin</a></li>
                     <li><a href="notation.htm">Notation</a></li>
-                    
                 </ul>
             </nav>
             <div class="auth-links">
@@ -45,7 +44,7 @@
     <section class="grid-layout">
     
     <div class="grid-item photo-container">
-         <img src="couscous.jpg" alt="Couscous au thon frais">
+         <img src="couscous.jpg" alt="Le Couscous Signature">
     </div>
 
     <div class="grid-item text-content">
@@ -66,7 +65,7 @@
     </div>
 
     <div class="grid-item photo-container">
-         <img src="couscous.jpg" alt="Plat signature Les Arcades">
+         <img src="restaurant-gastronomique-kembs-02-1920x1280.jpg" alt="Ambiance salle Les Arcades">
     </div>
 
 </section>
@@ -102,14 +101,15 @@
                 <span class="prix">15€</span>
             </div>
         </div>
-    <div class="search-wrapper">
-    <form class="search-form">
-        <input type="text" class="search-input" placeholder="Chercher un plat (ex: Royal, Tajine...)" aria-label="Rechercher">
-        <button type="submit" class="search-submit">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-        </button>
-    </form>
-</div>
+
+        <div class="search-wrapper">
+            <form class="search-form">
+                <input type="text" class="search-input" placeholder="Chercher un plat (ex: Royal, Tajine...)" aria-label="Rechercher">
+                <button type="submit" class="search-submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" x1="16.65" y2="21" y2="16.65"></line></svg>
+                </button>
+            </form>
+        </div>
 
         <div class="stats-container">
             <div class="stat-box">
